--- a/RondleidingRobotWPF/MainWindow.xaml
+++ b/RondleidingRobotWPF/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Canvas Background="Gray" Name="drawingCanvas" Width="750" Height="400" Margin="10,10,10,10"/>
 
     </Grid>
 </Window>
