--- a/RondleidingRobotWPF/MainWindow.xaml
+++ b/RondleidingRobotWPF/MainWindow.xaml
@@ -7,15 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="29*"/>
-            <ColumnDefinition Width="358*"/>
-            <ColumnDefinition Width="37*"/>
-            <ColumnDefinition Width="376*"/>
-        </Grid.ColumnDefinitions>
         <Canvas Background="Gray" Name="drawingCanvas" Width="750" Height="400" Margin="25,17,25,17" Grid.ColumnSpan="4"/>
-        <Button Content="Start" Name="startButton" Width="50" Grid.Column="1" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Click="startButton_Click"/>
-        <Button Content="Stop" Name="stopButton" Width="50" Grid.Column="1" HorizontalAlignment="Left" Margin="0,35,0,0" VerticalAlignment="Top" Click="stopButton_Click"/>
-
+        <Button Content="Start" Name="startButton" Width="50" HorizontalAlignment="Left" Margin="25,10,0,0" VerticalAlignment="Top" Click="startButton_Click"/>
+        <Button Content="Stop" Name="stopButton" Width="50" HorizontalAlignment="Left" Margin="25,35,0,0" VerticalAlignment="Top" Click="stopButton_Click"/>
     </Grid>
 </Window>
